--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
     <header class="hero-section py-20 md:py-32">
         <div class="container mx-auto px-6 text-center">
             <div class="max-w-4xl mx-auto">
-                <img src="https://placehold.co/150x150/66a6ff/FFFFFF?text=KG" alt="Profile Picture" class="w-32 h-32 md:w-40 md:h-40 rounded-full mx-auto mb-6 border-4 border-white shadow-lg">
+                <img src="https://instagram.fhyd14-5.fna.fbcdn.net/v/t51.2885-19/526625518_18402083614118506_3209142182186599560_n.jpg?stp=dst-jpg_s150x150_tt6&efg=eyJ2ZW5jb2RlX3RhZyI6InByb2ZpbGVfcGljLmRqYW5nby4xMDgwLmMyIn0&_nc_ht=instagram.fhyd14-5.fna.fbcdn.net&_nc_cat=110&_nc_oc=Q6cZ2QEe6QeoxV5WxRG5Pbq_AhYeSZ__XWH99XqqQhU9AyRp14OFLiLBjTBYPm4fY2x_CeXue2-tw9wdvqub7RC9gkEb&_nc_ohc=k_Tf3EaQAJcQ7kNvwE2iWz3&_nc_gid=ax4I3U3DTK43J_CxYyfaeg&edm=ALGbJPMBAAAA&ccb=7-5&oh=00_AfUiAD0lc-FVKbbceE3LxE-0IMptkncSeOt2mHqf1j7GOQ&oe=6898EDB4&_nc_sid=7d3ac5" alt="Profile Picture" class="w-32 h-32 md:w-40 md:h-40 rounded-full mx-auto mb-6 border-4 border-white shadow-lg">
                 <h1 class="text-4xl md:text-6xl font-bold mb-4">
                     Hi, I'm <span class="animated-text bg-cover" style="background-size: 200% auto;">Khush Goel</span>
                 </h1>
-                <p class="text-lg md:text-2xl text-gray-300 mb-8">A Creative Developer & UI/UX Enthusiast</p>
+                <p class="text-lg md:text-2xl text-gray-300 mb-8">A Final Year Corporate Law Enthusiast>
                 <a href="#projects" class="btn-primary font-bold py-3 px-8 rounded-full text-lg shadow-lg">
                     View My Work
                 </a>
